--- a/product/SRCNN/train.ipynb
+++ b/product/SRCNN/train.ipynb
@@ -18,21 +18,22 @@
    "source": [
     "\n",
     "import os, sys\n",
+    "from pathlib import Path\n",
     "\n",
     "result_fileout=True  #To fileout\n",
-    "result_dir='result'\n",
     "\n",
-    "sample_dir = result_dir + '/sample'\n",
-    "weight_dir = result_dir + '/weights'\n",
-    "os.makedirs(sample_dir, exist_ok=True)\n",
-    "os.makedirs(weight_dir, exist_ok=True)\n",
-    "os.makedirs(result_dir,exist_ok=True)\n",
+    "result_dir=Path('result')\n",
+    "sample_dir = result_dir / 'sample'\n",
+    "weight_dir = result_dir / 'weights'\n",
+    "os.makedirs(str(sample_dir), exist_ok=True)\n",
+    "os.makedirs(str(weight_dir), exist_ok=True)\n",
+    "os.makedirs(str(result_dir),exist_ok=True)\n",
     "backup_stdout = backup_stderr = None\n",
     "if result_fileout:\n",
     "    backup_stdout = sys.stdout\n",
     "    backup_stderr = sys.stderr\n",
-    "    sys.stdout = open(result_dir+'/log.stdout','w')\n",
-    "    sys.stderr = open(result_dir+'/log.stderr','w')\n",
+    "    sys.stdout = open(str(result_dir)+'/log.stdout','w')\n",
+    "    sys.stderr = open(str(result_dir)+'/log.stderr','w')\n",
     "\n",
     "import torch\n",
     "from torch import nn\n",
@@ -42,7 +43,6 @@
     "from torchvision.utils import save_image\n",
     "# from tensorboardX import SummaryWriter\n",
     "\n",
-    "from pathlib import Path\n",
     "from math import log10\n",
     "\n",
     "# from model import SRCNN\n",
@@ -210,8 +210,8 @@
     "#     writer.add_scalar('val/psnr', val_psnr / len(val_loader), global_step=epoch)\n",
     "    print(\"===> Avg. Loss: {:.4f}, PSNR: {:.4f} dB\".format(val_loss / len(val_loader), val_psnr / len(val_loader)))\n",
     "\n",
-    "#   torch.save(model.state_dict(), str(weight_dir / 'weight_epoch{:05}.pth'.format(epoch + 1)))\n",
-    "    torch.save(model.state_dict(), str(result_dir / 'weight_epoch{:05}.pth'.format(epoch + 1)))"
+    "    torch.save(model.state_dict(), str(weight_dir / 'weight_epoch{:05}.pth'.format(epoch + 1)))\n",
+    "#   torch.save(model.state_dict(), str(result_dir / 'weight_epoch{:05}.pth'.format(epoch + 1)))"
    ]
   },
   {
