--- a/product/SRCNN/viewres.ipynb
+++ b/product/SRCNN/viewres.ipynb
@@ -6,11 +6,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "srcnndB   = [1.1,2.1,3.1,4.1,5.1,6.1, 10.5]\n",
-    "srcnn11dB = [0,1,2,3,4,5]\n",
-    "resultdB  = {'SRCNN':srcnndB, 'SRCNN11':srcnn11dB}\n",
+    "import os\n",
+    "import numpy as np\n",
+    "dBhistory_file = 'dBhistory.npy'\n",
+    "srcnn_result   = './result/SRCNN/'  + dBhistory_file\n",
+    "srcnn11_result = './result/SRCNN11/'+ dBhistory_file\n",
     "\n",
-    "plot_type = 1  # 0:plot 1:scatter"
+    "resultdB = {}\n",
+    "if os.path.exists(srcnn_result):\n",
+    "    dB = np.load(srcnn_result)\n",
+    "    resultdB['SRCNN'] = dB\n",
+    "    print('load SRCNN Result',srcnn_result,len(dB))\n",
+    "\n",
+    "if os.path.exists(srcnn11_result):\n",
+    "    dB = np.load(srcnn11_result)\n",
+    "    resultdB['SRCNN11'] = dB\n",
+    "    print('load SRCNN11 Result',srcnn11_result,len(dB))\n",
+    "\n",
+    "if len(resultdB)==0:\n",
+    "    print('Error : Shown Data not found!')\n",
+    "else:\n",
+    "    print('Loaded data files',len(resultdB))"
    ]
   },
   {
@@ -19,6 +35,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plot_type = 1  # 0:plot 1:scatter\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "if plot_type==0:\n",
@@ -36,6 +54,16 @@
     "plt.xlabel(\"#epoch\")\n",
     "plt.ylabel(\"dB\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.save(srcnn_result,[10,20,30,40,50])\n",
+    "print(np.load(srcnn_result))"
    ]
   },
   {
