--- a/product/SRCNN/train.ipynb
+++ b/product/SRCNN/train.ipynb
@@ -6,8 +6,13 @@
    "source": [
     "# SRCNN Super Resolution CNN with pytorch  \n",
     "Training ipython for General100 Ddataset.  \n",
-    "Exercise for Product making.  \n",
-    "初期設定  "
+    "Exercise for Product making. \n",
+    "1. Initialize to run SRCNN  \n",
+    "2. Load Data General 100   \n",
+    "3. Load Model  \n",
+    "4. Loop step of training with outputs  \n",
+    "\n",
+    "stdout, stderr, weight and samples are saved into result directory.  "
    ]
   },
   {
@@ -16,18 +21,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import os, sys\n",
     "from pathlib import Path\n",
     "\n",
     "result_fileout=True  #To fileout\n",
     "\n",
-    "result_dir=Path('result')\n",
+    "result_dir=Path('result/SRCNN')\n",
     "sample_dir = result_dir / 'sample'\n",
     "weight_dir = result_dir / 'weights'\n",
     "os.makedirs(str(sample_dir), exist_ok=True)\n",
     "os.makedirs(str(weight_dir), exist_ok=True)\n",
     "os.makedirs(str(result_dir),exist_ok=True)\n",
+    "resultdB = result_dir / 'dBhistory.npy'\n",
     "backup_stdout = backup_stderr = None\n",
     "if result_fileout:\n",
     "    backup_stdout = sys.stdout\n",
@@ -41,8 +46,8 @@
     "from torch.utils.data import DataLoader\n",
     "from torch.autograd import Variable\n",
     "from torchvision.utils import save_image\n",
-    "# from tensorboardX import SummaryWriter\n",
     "\n",
+    "import numpy as np\n",
     "from math import log10\n",
     "\n",
     "# from model import SRCNN\n",
@@ -78,15 +83,7 @@
     "train_loader = DataLoader(dataset=train_set, batch_size=10, shuffle=True)\n",
     "\n",
     "val_set = DatasetFromFolderEval(image_dir='./data/General-100/val', scale_factor=4)\n",
-    "val_loader = DataLoader(dataset=val_set, batch_size=1, shuffle=False)\n",
-    "\n",
-    "# writer = SummaryWriter(log_dir=\"./log\")\n",
-    "#log_dir = Path(writer.log_dir)\n",
-    "# log_dir = Path(\"./log\")\n",
-    "# sample_dir = log_dir / 'sample'\n",
-    "# weight_dir = log_dir / 'weights'\n",
-    "# os.makedirs(sample_dir, exist_ok=True)\n",
-    "# os.makedirs(weight_dir, exist_ok=True)"
+    "val_loader = DataLoader(dataset=val_set, batch_size=1, shuffle=False)"
    ]
   },
   {
@@ -164,7 +161,11 @@
    },
    "outputs": [],
    "source": [
-    "for epoch in range(50000):\n",
+    "epochs = 50000\n",
+    "progressPSNR = []\n",
+    "progressLoss = []\n",
+    "from pdb import set_trace\n",
+    "for epoch in range(epochs):\n",
     "    model.train()\n",
     "    epoch_loss, epoch_psnr = 0, 0\n",
     "    for batch in train_loader:\n",
@@ -182,12 +183,10 @@
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "\n",
-    "#     writer.add_scalar('train/loss', epoch_loss / len(train_loader), global_step=epoch)\n",
-    "#     writer.add_scalar('train/psnr', epoch_psnr / len(train_loader), global_step=epoch)\n",
     "    print('[Epoch {}] Loss: {:.4f}, PSNR: {:.4f} dB'.format(epoch + 1, epoch_loss / len(train_loader), epoch_psnr / len(train_loader)))\n",
     "    sys.stdout.flush()\n",
     "\n",
-    "    if (epoch + 1) % 300 != 0:\n",
+    "    if (epoch + 1) % 5 != 0:\n",
     "        continue\n",
     "\n",
     "    model.eval()\n",
@@ -206,12 +205,14 @@
     "\n",
     "            save_image(prediction, sample_dir / '{}_epoch{:05}.png'.format(batch[2][0], epoch + 1), nrow=1)\n",
     "\n",
-    "#     writer.add_scalar('val/loss', val_loss / len(val_loader), global_step=epoch)\n",
-    "#     writer.add_scalar('val/psnr', val_psnr / len(val_loader), global_step=epoch)\n",
+    "    curr_loss = val_loss / len(val_loader)\n",
+    "    curr_psnr = val_psnr / len(val_loader)\n",
+    "    progressPSNR.append(curr_psnr)\n",
+    "    progressLoss.append(curr_loss)\n",
     "    print(\"===> Avg. Loss: {:.4f}, PSNR: {:.4f} dB\".format(val_loss / len(val_loader), val_psnr / len(val_loader)))\n",
-    "\n",
-    "    torch.save(model.state_dict(), str(weight_dir / 'weight_epoch{:05}.pth'.format(epoch + 1)))\n",
-    "#   torch.save(model.state_dict(), str(result_dir / 'weight_epoch{:05}.pth'.format(epoch + 1)))"
+    "    np.save(str(resultdB),progressPSNR)\n",
+    "    \n",
+    "    torch.save(model.state_dict(), str(weight_dir / 'weight_epoch{:05}.pth'.format(epoch + 1)))"
    ]
   },
   {
@@ -224,15 +225,6 @@
     "if result_fileout:\n",
     "    sys.stdout = backup_stdout if backup_stdout else None\n",
     "    sys.stderr = backup_stderr if backup_stderr else None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('abc')"
    ]
   },
   {
