--- a/product/SRCNN/train.ipynb
+++ b/product/SRCNN/train.ipynb
@@ -24,9 +24,28 @@
     "import os, sys\n",
     "from pathlib import Path\n",
     "\n",
-    "result_fileout=True  #To fileout\n",
+    "import argparse\n",
+    "parser = argparse.ArgumentParser(description='predictionCNN Example')\n",
+    "parser.add_argument('--cuda' , action='store_true', default=False)\n",
+    "parser.add_argument('--naive', action='store_true', default=False)\n",
+    "parser.add_argument('--c11'  , action='store_true', default=False)\n",
+    "if Path(sys.argv[0]).stem == 'ipykernel_launcher':\n",
+    "    # On IPython\n",
+    "    opt = parser.parse_args(args=[])\n",
+    "    # opt = parser.parse_args(args=[\"--cuda\"])\n",
+    "    # opt = parser.parse_args(args=[\"--naive\"])\n",
+    "    # opt = parser.parse_args(args=[\"--c11\"])\n",
+    "else:\n",
+    "    # On Console\n",
+    "    opt = parser.parse_args()\n",
     "\n",
-    "result_dir=Path('result/SRCNN')\n",
+    "result_fileout=True  #To fileout\n",
+    "result_dir=Path('result/SRCNN')    \n",
+    "if opt.naive:\n",
+    "    result_dir /= '-naive'\n",
+    "if opt.c11:\n",
+    "    result_dir /= '-c11'\n",
+    "\n",
     "sample_dir = result_dir / 'sample'\n",
     "weight_dir = result_dir / 'weights'\n",
     "os.makedirs(str(sample_dir), exist_ok=True)\n",
@@ -54,15 +73,7 @@
     "from torch.nn.functional import relu\n",
     "from torch.nn import MSELoss\n",
     "\n",
-    "from dataset import DatasetFromFolder, DatasetFromFolderEval\n",
-    "\n",
-    "import argparse\n",
-    "\n",
-    "parser = argparse.ArgumentParser(description='predictionCNN Example')\n",
-    "parser.add_argument('--cuda', action='store_true', default=False)\n",
-    "# opt = parser.parse_args()  # for terminal\n",
-    "# opt = parser.parse_args(args=[\"--cuda\"])\n",
-    "opt = parser.parse_args(args=[])"
+    "from dataset import DatasetFromFolder, DatasetFromFolderEval"
    ]
   },
   {
@@ -79,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_set = DatasetFromFolder(image_dir='./data/General-100/train', patch_size=96, scale_factor=4, data_augmentation=True)\n",
+    "train_set = DatasetFromFolder(image_dir='./data/General-100/train', patch_size=96, scale_factor=4, data_augmentation=not opt.naive)\n",
     "train_loader = DataLoader(dataset=train_set, batch_size=10, shuffle=True)\n",
     "\n",
     "val_set = DatasetFromFolderEval(image_dir='./data/General-100/val', scale_factor=4)\n",
