--- a/product/SRCNN/train.ipynb
+++ b/product/SRCNN/train.ipynb
@@ -29,6 +29,7 @@
     "parser.add_argument('--cuda' , action='store_true', default=False)\n",
     "parser.add_argument('--naive', action='store_true', default=False)\n",
     "parser.add_argument('--c11'  , action='store_true', default=False)\n",
+    "parser.add_argument('--con'  , action='store_true', default=False)\n",
     "if Path(sys.argv[0]).stem == 'ipykernel_launcher':\n",
     "    # On IPython\n",
     "    opt = parser.parse_args(args=[])\n",
@@ -39,12 +40,12 @@
     "    # On Console\n",
     "    opt = parser.parse_args()\n",
     "\n",
-    "result_fileout=True  #To fileout\n",
+    "result_fileout=not opt.con  #To fileout\n",
     "result_dir=Path('result/SRCNN')    \n",
     "if opt.naive:\n",
-    "    result_dir /= '-naive'\n",
+    "    result_dir = Path(str(result_dir)+'-naive')\n",
     "if opt.c11:\n",
-    "    result_dir /= '-c11'\n",
+    "    result_dir = Path(str(result_dir)+'-c11')\n",
     "\n",
     "sample_dir = result_dir / 'sample'\n",
     "weight_dir = result_dir / 'weights'\n",
