--- a/product/SRCNN/train.ipynb
+++ b/product/SRCNN/train.ipynb
@@ -30,6 +30,8 @@
     "parser.add_argument('--naive', action='store_true', default=False)\n",
     "parser.add_argument('--c11'  , action='store_true', default=False)\n",
     "parser.add_argument('--con'  , action='store_true', default=False)\n",
+    "parser.add_argument('--epoch', type=int, default=50*1000)\n",
+    "parser.add_argument('--snap' , type=int, default=500)\n",
     "if Path(sys.argv[0]).stem == 'ipykernel_launcher':\n",
     "    # On IPython\n",
     "    opt = parser.parse_args(args=[])\n",
@@ -59,6 +61,10 @@
     "    backup_stderr = sys.stderr\n",
     "    sys.stdout = open(str(result_dir)+'/log.stdout','w')\n",
     "    sys.stderr = open(str(result_dir)+'/log.stderr','w')\n",
+    "print(\"Result on {} file : {}\".format(result_dir, resultdB))\n",
+    "print(\" CUDA  : {}\".format(opt.cuda))\n",
+    "print(\" AUG   : {}\".format(not opt.naive))\n",
+    "print(\" C11   : {}\".format(opt.c11))\n",
     "\n",
     "import torch\n",
     "from torch import nn\n",
@@ -173,7 +179,12 @@
    },
    "outputs": [],
    "source": [
-    "epochs = 50000\n",
+    "try:\n",
+    "    epochs = opt.epoch\n",
+    "    snaps  = opt.snap\n",
+    "except:\n",
+    "    epochs = 5*10000\n",
+    "    snaps  = 5*  100\n",
     "progressPSNR = []\n",
     "progressLoss = []\n",
     "from pdb import set_trace\n",
@@ -198,7 +209,7 @@
     "    print('[Epoch {}] Loss: {:.4f}, PSNR: {:.4f} dB'.format(epoch + 1, epoch_loss / len(train_loader), epoch_psnr / len(train_loader)))\n",
     "    sys.stdout.flush()\n",
     "\n",
-    "    if (epoch + 1) % 500 != 0:\n",
+    "    if (epoch + 1) % snaps != 0:\n",
     "        continue\n",
     "\n",
     "    model.eval()\n",
@@ -224,6 +235,7 @@
     "    print(\"===> Avg. Loss: {:.4f}, PSNR: {:.4f} dB\".format(val_loss / len(val_loader), val_psnr / len(val_loader)))\n",
     "    np.save(str(resultdB),progressPSNR)\n",
     "    \n",
+    "    torch.save(model.state_dict(), str(result_dir / 'latest_weight.pth')) # Save Latest Weight\n",
     "    torch.save(model.state_dict(), str(weight_dir / 'weight_epoch{:05}.pth'.format(epoch + 1)))"
    ]
   },
