--- a/product/SRCNN/train.ipynb
+++ b/product/SRCNN/train.ipynb
@@ -38,6 +38,7 @@
     "    # opt = parser.parse_args(args=[\"--cuda\"])\n",
     "    # opt = parser.parse_args(args=[\"--naive\"])\n",
     "    # opt = parser.parse_args(args=[\"--c11\"])\n",
+    "    # opt = parser.parse_args(args=[\"--snap\",\"5\"])\n",
     "else:\n",
     "    # On Console\n",
     "    opt = parser.parse_args()\n",
@@ -214,6 +215,7 @@
     "\n",
     "    model.eval()\n",
     "    val_loss, val_psnr = 0, 0\n",
+    "    val_loss0,val_psnr0= 0, 0\n",
     "    with torch.no_grad():\n",
     "        for batch in val_loader:\n",
     "            inputs, targets = batch[0], batch[1]\n",
@@ -225,14 +227,20 @@
     "            loss = criterion(prediction, targets)\n",
     "            val_loss += loss.data\n",
     "            val_psnr += 10 * log10(1 / loss.data)\n",
+    "            \n",
+    "            loss0= criterion(inputs, targets)\n",
+    "            val_loss0+= loss0.data\n",
+    "            val_psnr0+= 10 * log10(1 / loss0.data)\n",
     "\n",
     "            save_image(prediction, sample_dir / '{}_epoch{:05}.png'.format(batch[2][0], epoch + 1), nrow=1)\n",
     "\n",
-    "    curr_loss = val_loss / len(val_loader)\n",
-    "    curr_psnr = val_psnr / len(val_loader)\n",
-    "    progressPSNR.append(curr_psnr)\n",
-    "    progressLoss.append(curr_loss)\n",
-    "    print(\"===> Avg. Loss: {:.4f}, PSNR: {:.4f} dB\".format(val_loss / len(val_loader), val_psnr / len(val_loader)))\n",
+    "    avrg_loss0= val_loss0/ len(val_loader) # For Validation\n",
+    "    avrg_psnr0= val_psnr0/ len(val_loader)\n",
+    "    avrg_loss = val_loss / len(val_loader) # For Prediction\n",
+    "    avrg_psnr = val_psnr / len(val_loader)\n",
+    "    progressPSNR.append(avrg_psnr)\n",
+    "    progressLoss.append(avrg_loss)\n",
+    "    print(\"===> Avrg Loss: {:.4f} PSNR: {:.4f} dB [ VAL {:.4f} / {:.4f} dB ]\".format(avrg_loss, avrg_psnr, avrg_loss0, avrg_psnr0))\n",
     "    np.save(str(resultdB),progressPSNR)\n",
     "    \n",
     "    torch.save(model.state_dict(), str(result_dir / 'latest_weight.pth')) # Save Latest Weight\n",
