--- a/product/SRCNN/train.ipynb
+++ b/product/SRCNN/train.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
     "progressLoss = []\n",
     "from pdb import set_trace\n",
     "for epoch in range(epochs):\n",
-    "    model.train()\n",
+    "    model.train() # Training Phase\n",
     "    epoch_loss, epoch_psnr = 0, 0\n",
     "    for batch in train_loader:\n",
     "        inputs, targets = Variable(batch[0]), Variable(batch[1])\n",
@@ -213,7 +213,7 @@
     "    if (epoch + 1) % snaps != 0:\n",
     "        continue\n",
     "\n",
-    "    model.eval()\n",
+    "    model.eval()  # Evaluation Phase\n",
     "    val_loss, val_psnr = 0, 0\n",
     "    val_loss0,val_psnr0= 0, 0\n",
     "    with torch.no_grad():\n",
@@ -232,7 +232,10 @@
     "            val_loss0+= loss0.data\n",
     "            val_psnr0+= 10 * log10(1 / loss0.data)\n",
     "\n",
-    "            save_image(prediction, sample_dir / '{}_epoch{:05}.png'.format(batch[2][0], epoch + 1), nrow=1)\n",
+    "            pred_file   = sample_dir / '{}_epoch{:05}.png'.format(batch[2][0], epoch + 1)\n",
+    "            target_file = sample_dir / '{}_epoch{:05}.png'.format(batch[2][0], 00000)\n",
+    "            save_image(prediction, pred_file, nrow=1)\n",
+    "            if not target_file.exists(): save_image(targets, target_file, nrow=1)\n",
     "\n",
     "    avrg_loss0= val_loss0/ len(val_loader) # For Validation\n",
     "    avrg_psnr0= val_psnr0/ len(val_loader)\n",
