--- a/product/SRCNN/train.ipynb
+++ b/product/SRCNN/train.ipynb
@@ -5,9 +5,9 @@
    "metadata": {},
    "source": [
     "# SRCNN Super Resolution CNN with pytorch  \n",
-    "Training ipython for General100 Ddataset.  \n",
+    "## Training ipython for General100 Ddataset.  \n",
     "Exercise for Product making. \n",
-    "1. Initialize to run SRCNN  \n",
+    "1. Initialize to run SRCNN Model  \n",
     "2. Load Data General 100   \n",
     "3. Load Model  \n",
     "4. Loop step of training with outputs  \n",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,27 +81,91 @@
     "from torch.nn.functional import relu\n",
     "from torch.nn import MSELoss\n",
     "\n",
-    "from dataset import DatasetFromFolder, DatasetFromFolderEval"
+    "import torch.utils.data as data\n",
+    "from torchvision import transforms\n",
+    "from torchvision.transforms import ToTensor, RandomCrop\n",
+    "from PIL import Image, ImageOps\n",
+    "from pathlib import Path\n",
+    "import random"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "データ準備  \n",
-    "ログ設定  "
+    "データローダ定義  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_set = DatasetFromFolder(image_dir='./data/General-100/train', patch_size=96, scale_factor=4, data_augmentation=not opt.naive)\n",
+    "class DatasetLoader4Train(data.Dataset):\n",
+    "    def __init__(self, image_dir, patch_size, scale_factor, data_augmentation=True):\n",
+    "        super(DatasetLoader4Train, self).__init__()\n",
+    "        self.filenames = [str(filename) for filename in Path(image_dir).glob('*') if filename.suffix in ['.bmp', '.jpg', '.png']]\n",
+    "        self.patch_size = patch_size\n",
+    "        self.scale_factor = scale_factor\n",
+    "        self.data_augmentation = data_augmentation\n",
+    "        self.crop = RandomCrop(self.patch_size)\n",
+    "\n",
+    "    def __getitem__(self, index):\n",
+    "        target_img = Image.open(self.filenames[index]).convert('RGB')\n",
+    "        target_img = self.crop(target_img)\n",
+    "\n",
+    "        if self.data_augmentation:     # Data Augmentation\n",
+    "            if random.random() < 0.5:\n",
+    "                target_img = ImageOps.flip(target_img)\n",
+    "            if random.random() < 0.5:\n",
+    "                target_img = ImageOps.mirror(target_img)\n",
+    "            if random.random() < 0.5:\n",
+    "                target_img = target_img.rotate(180)\n",
+    "        difficulty = 2\n",
+    "        input_img = target_img.resize((self.patch_size // self.scale_factor,) * difficulty, Image.BICUBIC)\n",
+    "        input_img = input_img.resize((self.patch_size,) * difficulty, Image.BICUBIC)\n",
+    "\n",
+    "        return ToTensor()(input_img), ToTensor()(target_img)\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.filenames)\n",
+    "\n",
+    "class DatasetLoader4Eval(data.Dataset):\n",
+    "    def __init__(self, image_dir, scale_factor):\n",
+    "        super(DatasetLoader4Eval, self).__init__()\n",
+    "        self.filenames = [str(filename) for filename in Path(image_dir).glob('*') if filename.suffix in ['.bmp', '.jpg', '.png']]\n",
+    "        self.scale_factor = scale_factor\n",
+    "\n",
+    "    def __getitem__(self, index):\n",
+    "        target_img = Image.open(self.filenames[index]).convert('RGB')\n",
+    "\n",
+    "        input_img = target_img.resize((target_img.size[0] // self.scale_factor, target_img.size[1] // self.scale_factor), Image.BICUBIC)\n",
+    "        input_img = input_img.resize(target_img.size, Image.BICUBIC)\n",
+    "\n",
+    "        return ToTensor()(input_img), ToTensor()(target_img), Path(self.filenames[index]).stem\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.filenames)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "データ読み込み   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_set = DatasetLoader4Train(image_dir='./data/General-100/train', patch_size=96, scale_factor=4, data_augmentation=not opt.naive)\n",
     "train_loader = DataLoader(dataset=train_set, batch_size=10, shuffle=True)\n",
     "\n",
-    "val_set = DatasetFromFolderEval(image_dir='./data/General-100/val', scale_factor=4)\n",
+    "val_set = DatasetLoader4Eval(image_dir='./data/General-100/val', scale_factor=4)\n",
     "val_loader = DataLoader(dataset=val_set, batch_size=1, shuffle=False)"
    ]
   },
@@ -114,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +277,7 @@
     "    if (epoch + 1) % snaps != 0:\n",
     "        continue\n",
     "\n",
-    "    model.eval()  # Evaluation Phase\n",
+    "    model.eval()  # Validation Phase\n",
     "    val_loss, val_psnr = 0, 0\n",
     "    val_loss0,val_psnr0= 0, 0\n",
     "    with torch.no_grad():\n",
