--- a/product/SRCNN/train.ipynb
+++ b/product/SRCNN/train.ipynb
@@ -122,9 +122,8 @@
     "                target_img = ImageOps.mirror(target_img)\n",
     "            if random.random() < 0.5:\n",
     "                target_img = target_img.rotate(180)\n",
-    "        difficulty = 2\n",
-    "        input_img = target_img.resize((self.patch_size // self.scale_factor,) * difficulty, Image.BICUBIC)\n",
-    "        input_img = input_img.resize((self.patch_size,) * difficulty, Image.BICUBIC)\n",
+    "        input_img = target_img.resize((self.patch_size // self.scale_factor,) * 2, Image.BICUBIC)\n",
+    "        input_img = input_img.resize((self.patch_size,) * 2, Image.BICUBIC)\n",
     "\n",
     "        return ToTensor()(input_img), ToTensor()(target_img)\n",
     "\n",
