--- a/product/SRCNN/train.ipynb
+++ b/product/SRCNN/train.ipynb
@@ -7,10 +7,13 @@
     "# SRCNN Super Resolution CNN with pytorch  \n",
     "## Training ipython for General100 Ddataset.  \n",
     "Exercise for Product making. \n",
-    "1. Initialize to run SRCNN Model  \n",
-    "2. Load Data General 100   \n",
-    "3. Load Model  \n",
-    "4. Loop step of training with outputs  \n",
+    "  1. Initialize to run SRCNN Model  \n",
+    "  2. Load Data General 100   \n",
+    "  3. Load Model  \n",
+    "  4. Loop step of training with outputs  \n",
+    "\n",
+    "Ref.  \n",
+    "Chao Dong, Chen Change Loy, Kaiming He, Xiaoou Tang. Learning a Deep Convolutional Network for Image Super-Resolution, in Proceedings of European Conference on Computer Vision (ECCV), 2014 \n",
     "\n",
     "stdout, stderr, weight and samples are saved into result directory.  "
    ]
@@ -183,8 +186,7 @@
    "metadata": {},
    "source": [
     "## SRCNNモデル定義  \n",
-    "論文に従いモデルを定義  \n",
-    "Chao Dong, Chen Change Loy, Kaiming He, Xiaoou Tang. Learning a Deep Convolutional Network for Image Super-Resolution, in Proceedings of European Conference on Computer Vision (ECCV), 2014  "
+    "論文に従いモデルを定義   "
    ]
   },
   {
