--- a/product/SRCNN/train.ipynb
+++ b/product/SRCNN/train.ipynb
@@ -5,10 +5,11 @@
    "metadata": {},
    "source": [
     "# プロダクト開発演習  \n",
-    "## SRCNN(Ref.)を用いた超解像  \n",
+    "## テーマ：SRCNNモデルによる超解像  \n",
     "### 摘要  \n",
-    "**Pytorchフレームワーク上にて、超解像の実装並びに結果の考察を行う。ニューラルネットワークはSRCNNを用い論文記載の構成とする。広範囲の特徴抽出の有効性を確認するため、特徴抽出層にカーネルを追加したモデル(SRCNN-c11)を定義し、SRCNNとPSNR(dB)を比較する。General100データセットを用いた学習並びに、ホールドアウト法によるPSNR(dB)にて評価する。画像劣化方式としてBICUBICによる拡大縮小を採用する。結果(viewres.ipynb)として、カーネル追加による精度改善は見られなかった。セピア調劣化方式での画像劣化に対するモデルの作用を追試(testview.ipynb)し、自己教師あり学習の限界を確認した。**  \n",
+    "**Pytorchフレームワーク上にて、超解像の実装並びに結果の考察を行う。ニューラルネットワークはSRCNNを用い論文記載の構成とする。広範囲の特徴抽出の有効性を確認するため、特徴抽出層にカーネルを追加したモデル(SRCNN-c11)を定義し、SRCNNとPSNR(dB)を比較する。[General100](http://mmlab.ie.cuhk.edu.hk/projects/FSRCNN.html)データセットを用いた学習並びに、ホールドアウト法によるPSNR(dB)にて評価する。画像劣化方式としてBICUBICによる拡大縮小を適用する。結果(viewres.ipynb)として、カーネル追加による精度改善は見られなかった。またセピア調劣化方式での画像劣化に対する追試を行い(testview.ipynb)、自己教師あり学習の課題について考察した。**  \n",
     "\n",
+    "**train.ipynb処理概要**  \n",
     "  1. 環境定義  \n",
     "  2. データローディングと拡張\n",
     "  3. モデル定義とインスタンス  \n",
@@ -19,7 +20,9 @@
     "\"Chao Dong, Chen Change Loy, Kaiming He, Xiaoou Tang. Learning a Deep Convolutional Network for Image Super-Resolution, in Proceedings of European Conference on Computer Vision (ECCV), 2014\"  \n",
     "**自己教師あり学習**  \n",
     "\n",
-    "### データ拡張  \n",
+    "### 学習データ及びデータ拡張  \n",
+    "**[General100 Dataset](http://mmlab.ie.cuhk.edu.hk/projects/FSRCNN.html)を学習データとして用いる  \n",
+    "100画像を学習用途80、バリデーション用途、テスト用途に各10画像に分け学習を行うが、データセットのダウンロード、展開、dataディレクトリへの分割については[付録参照](#学習データ)**  \n",
     "**Flip, Mirror, Rotateを適用**  \n",
     "**画像劣化手法：BICUBLIC**  \n",
     "**拡張あり無しでのPSNR(dB)比較（Holdout法）**  \n",
@@ -47,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,18 +62,18 @@
     "    parser.add_argument('--cuda' , action='store_true', default=False)\n",
     "    parser.add_argument('--naive', action='store_true', default=False)\n",
     "    parser.add_argument('--c11'  , action='store_true', default=False)\n",
-    "    parser.add_argument('--sepia', action='store_true', default=False)\n",
+    "    parser.add_argument('--comp' , action='store_true', default=False)\n",
     "    parser.add_argument('--con'  , action='store_true', default=False)\n",
+    "    parser.add_argument('--q'    , type=int, default=8)\n",
     "    parser.add_argument('--epoch', type=int, default=50*1000)\n",
     "    parser.add_argument('--snap' , type=int, default=500)\n",
     "    if Path(sys.argv[0]).stem == 'ipykernel_launcher':\n",
     "        # On Jupyter\n",
-    "        opt = parser.parse_args(args=[\"--con\"])\n",
-    "        # opt = parser.parse_args(args=[\"--sepia\"])\n",
+    "        opt = parser.parse_args(args=[\"--comp\",\"--snap\",\"5\"])\n",
+    "        # opt = parser.parse_args(args=[\"--comp\"])\n",
     "        # opt = parser.parse_args(args=[\"--cuda\"])\n",
     "        # opt = parser.parse_args(args=[\"--naive\"])\n",
     "        # opt = parser.parse_args(args=[\"--c11\"])\n",
-    "        # opt = parser.parse_args(args=[\"--sepia\"])\n",
     "        # opt = parser.parse_args(args=[\"--snap\",\"500\"])\n",
     "    else:\n",
     "        # On Console python3\n",
@@ -78,8 +81,8 @@
     "\n",
     "    result_fileout=not opt.con  #To fileout\n",
     "    result_dir=Path('result')\n",
-    "    if opt.sepia:\n",
-    "        result_dir = Path(str(result_dir)+'-sepia')\n",
+    "    if opt.comp:\n",
+    "        result_dir = Path(str(result_dir)+'-comp'+str(opt.q))\n",
     "    result_dir/='SRCNN'    \n",
     "    if opt.naive:\n",
     "        result_dir = Path(str(result_dir)+'-naive')\n",
@@ -102,7 +105,7 @@
     "    print(\" CUDA  : {}\".format(opt.cuda))\n",
     "    print(\" AUG   : {}\".format(not opt.naive))\n",
     "    print(\" C11   : {}\".format(opt.c11))\n",
-    "    print(\" sepia : {}\".format(opt.sepia))\n",
+    "    print(\" COMP  : {}\".format(opt.comp))\n",
     "\n",
     "import torch\n",
     "from torch import nn\n",
@@ -137,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,32 +270,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sepiatone(img):\n",
+    "import cv2\n",
+    "def compress(img, Quality=10):\n",
     "    img = np.array(img)\n",
     "    # Random effect ratio\n",
-    "    random_filter = np.random.uniform(low=0.8, high=.9, size=(3,3))\n",
-    "    # Sepiatone filter\n",
-    "    sepia_filter = np.array([[.393, .769, .189],\n",
-    "                             [.349, .686, .168],\n",
-    "                             [.272, .534, .131]])\n",
-    "    sepia_filter*=random_filter\n",
-    "    sepia_img = img.dot(sepia_filter.T)\n",
-    "    sepia_img  = Image.fromarray(np.uint8(sepia_img))\n",
-    "    return sepia_img\n",
+    "#    random_filter = np.random.uniform(low=0.8, high=.9, size=(3,3))\n",
+    "#    sepia_filter = np.array([[.393, .769, .189],\n",
+    "#                             [.349, .686, .168],\n",
+    "#                             [.272, .534, .131]])\n",
+    "#    sepia_filter*=random_filter\n",
+    "#    Quality = 10\n",
+    "    encode_param = [int(cv2.IMWRITE_JPEG_QUALITY), Quality]\n",
+    "    result, img = cv2.imencode(\".jpg\", img, encode_param)\n",
+    "    out_img = cv2.imdecode(img, cv2.IMREAD_UNCHANGED)\n",
+    "\n",
+    "#    sepia_img = img.dot(sepia_filter.T)\n",
+    "    out_img  = Image.fromarray(np.uint8(out_img))\n",
+    "    return out_img\n",
     "\n",
     "class DatasetLoader4Train(data.Dataset):\n",
-    "    def __init__(self, image_dir, patch_size, scale_factor, data_augmentation=True, sepian=False):\n",
+    "    def __init__(self, image_dir, patch_size, scale_factor, data_augmentation=True, comp=False):\n",
     "        super(DatasetLoader4Train, self).__init__()\n",
     "        self.filenames = [str(filename) for filename in Path(image_dir).glob('*') if filename.suffix in ['.bmp', '.jpg', '.png']]\n",
     "        self.patch_size = patch_size\n",
     "        self.scale_factor = scale_factor\n",
     "        self.data_augmentation = data_augmentation\n",
     "        self.crop = RandomCrop(self.patch_size)\n",
-    "        self.sepian = sepian\n",
+    "        self.comp = comp\n",
     "\n",
     "    def __getitem__(self, index):\n",
     "        target_img = Image.open(self.filenames[index]).convert('RGB')\n",
@@ -311,9 +319,8 @@
     "        input_img = target_img.resize((self.patch_size // self.scale_factor,) * 2, Image.BICUBIC)\n",
     "        input_img = input_img.resize((self.patch_size,) * 2, Image.BICUBIC)\n",
     "\n",
-    "        # SepiaTone filter\n",
-    "        if self.sepian:\n",
-    "            input_img = sepiatone(input_img)\n",
+    "        # COMPRESS\n",
+    "        if self.comp:input_img = compress(input_img)\n",
     "\n",
     "        return ToTensor()(input_img), ToTensor()(target_img)\n",
     "\n",
@@ -321,11 +328,11 @@
     "        return len(self.filenames)\n",
     "\n",
     "class DatasetLoader4Eval(data.Dataset):\n",
-    "    def __init__(self, image_dir, scale_factor, sepian=False):\n",
+    "    def __init__(self, image_dir, scale_factor, comp=False):\n",
     "        super(DatasetLoader4Eval, self).__init__()\n",
     "        self.filenames = [str(filename) for filename in Path(image_dir).glob('*') if filename.suffix in ['.bmp', '.jpg', '.png']]\n",
     "        self.scale_factor = scale_factor\n",
-    "        self.sepian = sepian\n",
+    "        self.comp = comp\n",
     "\n",
     "    def __getitem__(self, index):\n",
     "        target_img = Image.open(self.filenames[index]).convert('RGB')\n",
@@ -334,9 +341,8 @@
     "        input_img = target_img.resize((target_img.size[0] // self.scale_factor, target_img.size[1] // self.scale_factor), Image.BICUBIC)\n",
     "        input_img = input_img.resize(target_img.size, Image.BICUBIC)\n",
     "\n",
-    "        # SepiaTone filter\n",
-    "        if self.sepian:\n",
-    "            input_img = sepiatone(input_img)\n",
+    "        # COMPRESS\n",
+    "        if self.comp: input_img = compress(input_img)\n",
     "            \n",
     "        return ToTensor()(input_img), ToTensor()(target_img), Path(self.filenames[index]).stem\n",
     "\n",
@@ -354,18 +360,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-f7615195a256>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     50\u001b[0m                     \u001b[0mtargets\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtargets\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcuda\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     51\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 52\u001b[0;31m                 \u001b[0mprediction\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     53\u001b[0m                 \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprediction\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtargets\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     54\u001b[0m                 \u001b[0mval_loss\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m_call_impl\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m    725\u001b[0m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_slow_forward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    726\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 727\u001b[0;31m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    728\u001b[0m         for hook in itertools.chain(\n\u001b[1;32m    729\u001b[0m                 \u001b[0m_global_forward_hooks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-2-8dc840f99d80>\u001b[0m in \u001b[0;36mforward\u001b[0;34m(self, x)\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m         \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconv1\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m         \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrelu\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m         \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconv2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m_call_impl\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m    725\u001b[0m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_slow_forward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    726\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 727\u001b[0;31m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    728\u001b[0m         for hook in itertools.chain(\n\u001b[1;32m    729\u001b[0m                 \u001b[0m_global_forward_hooks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/torch/nn/modules/conv.py\u001b[0m in \u001b[0;36mforward\u001b[0;34m(self, input)\u001b[0m\n\u001b[1;32m    421\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    422\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mTensor\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0mTensor\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 423\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_conv_forward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mweight\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    424\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    425\u001b[0m \u001b[0;32mclass\u001b[0m \u001b[0mConv3d\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_ConvNd\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/torch/nn/modules/conv.py\u001b[0m in \u001b[0;36m_conv_forward\u001b[0;34m(self, input, weight)\u001b[0m\n\u001b[1;32m    417\u001b[0m                             \u001b[0mweight\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbias\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstride\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    418\u001b[0m                             _pair(0), self.dilation, self.groups)\n\u001b[0;32m--> 419\u001b[0;31m         return F.conv2d(input, weight, self.bias, self.stride,\n\u001b[0m\u001b[1;32m    420\u001b[0m                         self.padding, self.dilation, self.groups)\n\u001b[1;32m    421\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "if __name__=='__main__':\n",
     "\n",
-    "    train_set = DatasetLoader4Train(image_dir='./data/General-100/train', patch_size=96, scale_factor=4, data_augmentation=not opt.naive, sepian=opt.sepia)\n",
+    "    train_set = DatasetLoader4Train(image_dir='./data/General-100/train', patch_size=96, scale_factor=4, data_augmentation=not opt.naive, comp=opt.comp)\n",
     "    train_loader = DataLoader(dataset=train_set, batch_size=10, shuffle=True)\n",
     "\n",
-    "    val_set = DatasetLoader4Eval(image_dir='./data/General-100/val', scale_factor=4, sepian=opt.sepia)\n",
+    "    val_set = DatasetLoader4Eval(image_dir='./data/General-100/val', scale_factor=4, comp=opt.comp)\n",
     "    val_loader = DataLoader(dataset=val_set, batch_size=1, shuffle=False)\n",
     "\n",
     "    try:\n",
@@ -448,7 +471,18 @@
    "metadata": {},
    "source": [
     "### 学習結果(viewres.ipynb)\n",
-    "**viewres.ipynbにて結果表示並びに考察**"
+    "**viewres.ipynbにて学習処理の結果表示並びに考察**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a name=\"学習データ\"></a>  \n",
+    "**付録**  \n",
+    "学習データは、以下の３つのディレクトリへ分けて置く  \n",
+    "data/General-100/train data/General-100/val data/General-100/test  \n",
+    "学習データ80画像、バリデーション10画像、テスト10画像をランダムに選択した    "
    ]
   }
  ],
