--- a/product/SRCNN/train.ipynb
+++ b/product/SRCNN/train.ipynb
@@ -48,22 +48,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Result on result/SRCNN, File : result/SRCNN/dBhistory.npy\n",
-      " CUDA  : False\n",
-      " AUG   : True\n",
-      " C11   : False\n",
-      " SYM   : False\n",
-      " COMP  : False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os, sys\n",
     "from pathlib import Path\n",
@@ -438,7 +425,7 @@
     "    except:\n",
     "        epochs = 5*10000\n",
     "        snaps  = 5*  100\n",
-    "    progressProgress = []\n",
+    "    trainProgress = []\n",
     "#   progressLoss = []\n",
     "    from pdb import set_trace\n",
     "    for epoch in range(epochs):\n",
@@ -453,7 +440,7 @@
     "            optimizer.zero_grad()\n",
     "            prediction = model(inputs)\n",
     "            loss = criterion(prediction, targets)\n",
-    "            epoch_loss += loss.data\n",
+    "            epoch_loss += float(loss.data)\n",
     "            epoch_psnr += 10 * log10(1 / loss.data)\n",
     "\n",
     "            loss.backward()\n",
@@ -479,11 +466,11 @@
     "\n",
     "                prediction = model(inputs)\n",
     "                loss = criterion(prediction, targets)\n",
-    "                val_loss += loss.data\n",
+    "                val_loss += float(loss.data)\n",
     "                val_psnr += 10 * log10(1 / loss.data)\n",
     "            \n",
     "                loss0= criterion(inputs, targets)\n",
-    "                val_loss0+= loss0.data\n",
+    "                val_loss0+= float(loss0.data)\n",
     "                val_psnr0+= 10 * log10(1 / loss0.data)\n",
     "\n",
     "                pred_file   = sample_dir / '{}_epoch{:05}.png'.format(batch[2][0], epoch + 1)\n",
@@ -495,10 +482,10 @@
     "        avrg_val_psnr0= val_psnr0/ len(val_loader)\n",
     "        avrg_val_loss = val_loss / len(val_loader) # ValData Prediction vs GTruth\n",
     "        avrg_val_psnr = val_psnr / len(val_loader)\n",
-    "        progressProgress.append([ avrg_train_loss, avrg_train_psnr, avrg_val_loss, avrg_val_psnr ]) # TrainLoss, TrainPSNR, ValLoss, ValPSNR\n",
-    "#        progressLoss.append(avrg_loss)\n",
+    "        trainProgress.append([ avrg_train_loss, avrg_train_psnr, avrg_val_loss, avrg_val_psnr ]) # TrainLoss, TrainPSNR, ValLoss, ValPSNR\n",
+    "\n",
     "        print(\"===> Avrg Loss: {:.4f} PSNR: {:.4f} dB [ VAL {:.4f} / {:.4f} dB ]\".format(avrg_val_loss, avrg_val_psnr, avrg_val_loss0, avrg_val_psnr0))\n",
-    "        np.save(str(resultdB),progressProgress)\n",
+    "        np.save(str(resultdB),trainProgress)\n",
     "    \n",
     "        torch.save(model.state_dict(), str(result_dir / 'latest_weight.pth')) # Save Latest Weight\n",
     "        torch.save(model.state_dict(), str(weight_dir / 'weight_epoch{:05}.pth'.format(epoch + 1)))\n",
