--- a/product/SRCNN/train.ipynb
+++ b/product/SRCNN/train.ipynb
@@ -92,6 +92,8 @@
     "        result_dir = Path(str(result_dir)+'-naive')\n",
     "    if opt.c11:\n",
     "        result_dir = Path(str(result_dir)+'-c11')\n",
+    "    if opt.sym:\n",
+    "        result_dir = Path(str(result_dir)+'-sym')\n",
     "\n",
     "    sample_dir = result_dir / 'sample'\n",
     "    weight_dir = result_dir / 'weights'\n",
